# bar

./: CMakeLists.txt  README.md  Taskfile.yml  main.c
cmake/: IWYU.cmake
example/: README.md  init.lua  style.css
include/: moonbar-app.inl.h  moonbar-box.inl.h  moonbar-button.inl.h  moonbar-callback.inl.h  moonbar-events.inl.h  moonbar-label.inl.h  moonbar-lua.inl.h  moonbar-process.inl.h  moonbar.h
lib/: CMakeLists.txt
lib/hypr/: CMakeLists.txt
lua/: battery.lua  memory.lua  moonbar.lua  utils.lua
lua/moonbar/: arch.lua  box.lua
modules/: CMakeLists.txt
modules/battery/: CMakeLists.txt  battery.c  battery.h  battery_lib.c  battery_meta.c
modules/tray/: CMakeLists.txt  tray.c  tray.h  tray_lib.c  tray_meta.c
src/: CMakeLists.txt  api.c  api.h  api_read_lines.c  api_spawn.c  api_watch.c  app.c  app.h  box.c  box_lib.c  box_meta.c  button.c  button.h  button_lib.c  button_meta.c  event_router_meta.c  events.c  events_lib.c  file_line_reader.c  file_line_reader.h  file_watcher.c  file_watcher.h  hypr_client.c  hypr_client.h  label.c  label.h  label_lib.c  label_meta.c  log.h  state_gtk.c  state_gtk.h  state_lua.c  state_lua.h  util.c  util.h  widget.h  widget_meta.c
src/hypr/: CMakeLists.txt  hypr_event.c  hypr_event.h  hypr_parser.c  hypr_parser.h
